Fixed responsive layout problems

--- a/src/components/ImageComponent.css
+++ b/src/components/ImageComponent.css
@@ -1,61 +1,49 @@
-.crop-viewer {
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+/* ImageComponent.css */
 
-  .crop-image-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    /* overflow: hidden; */
-  }
+.image-component-container {
+  width: 100%;
+  /* max-width: 50vw; */
+  border-radius: 0.5em;
+  height: auto;
+  overflow: hidden;
+  position: relative; /* Ensure relative positioning for tooltip */
+}
 
-  .crop-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+.crop-image {
+  aspect-ratio: 5 / 3; 
+  width: 100%;
+  height: auto; /* Maintain aspect ratio */
+  object-fit: cover;
+}
 
-  .label-marker {
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    background-color:#EF6074;
-    border: 3px solid #fff;
-    /* opacity: 0.8; */
-    mix-blend-mode: hard-light;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    border-radius: 50%;
-    opacity: 0;
-    transition: all 0.3s ease-in-out; 
-  }
+.label-marker {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  background-color: #EF6074;
+  border: 3px solid #fff;
+  mix-blend-mode: hard-light;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  border-radius: 50%;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
 
-  .label-marker.visible {
-    opacity: 1;
-  }
+.label-marker.visible {
+  opacity: 1;
+}
 
-
-  .image-component-container{
-    width: 50vw;
-    border-radius: 0.5em;
-    overflow: hidden;
-
-  }
-
-  .tooltip {
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.75);
-    color: white;
-    padding: 5px 10px;
-    border-radius: 6px;
-    transform: translate(-50%, -150%);
-    white-space: nowrap;
-    z-index: 10;
-    margin-bottom: 24px;
-  }
+.tooltip {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.75);
+  color: white;
+  padding: 5px 10px;
+  border-radius: 6px;
+  transform: translate(-50%, -150%);
+  white-space: nowrap;
+  z-index: 10;
+  margin-bottom: 24px;
+}
