--- a/src/survey/ImageSelection/ImageSelection.css
+++ b/src/survey/ImageSelection/ImageSelection.css
@@ -1,46 +1,54 @@
 /* ImageSelection.css */
 .image-selection-container {
-    margin: auto;
-  }
+  margin: auto;
+  flex-direction: column;
+  justify-content: center; /* Align vertically center */
+  height: 95vh; /* Use the full viewport height */
+  overflow: auto; /* Hide overflow to prevent scrolling */
   
-  .image-content {
-    margin: auto;
-    width: 80vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .question-header {
-    text-align: left;
-  }
-  
-  .image-wrapper {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .image {
-    aspect-ratio: 5 / 3;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-  }
-  
-  .image-selection-options {
-    width: 60vw;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    align-items: center;
-    margin-bottom: 4rem; /* Adjusted to use rem for consistency */
-  }
-  
-  .options-wrapper {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    gap: 1em;
-  }
+}
+
+.image-content {
+  margin: auto;
+  width: 80vw;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.question-header {
+  text-align: left;
+}
+
+.image-wrapper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+}
+
+.image {
+  aspect-ratio: 5 / 3;
+  width: 100%;
+  height: auto; /* Maintain aspect ratio */
+  object-fit: cover;
+}
+
+.image-selection-options {
+  width: 60vw;
+  margin: auto;
+  display: flex;
+  height: 70vh;
+  flex-direction: column;
+  gap: 1em;
+  align-items: center;
+  margin-bottom: 4rem; /* Adjusted to use rem for consistency */
+}
+
+.options-wrapper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  gap: 1em;
+}
